objects/UploadUsers__c.object
<CustomObject>
    <description>This object contains all users from AD extract</description>
    <fields>
        <fullName>BMCServiceDesk_Account_Name__c</fullName>
        <label>BMCServiceDesk__Account_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessOrg__c</fullName>
        <label>BusinessOrg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailEncodingKey__c</fullName>
        <label>EmailEncodingKey</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederationIdentifier__c</fullName>
        <label>FederationIdentifier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageLocalKey__c</fullName>
        <label>LanguageLocalKey</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <label>LocaleSidKey</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerEmail__c</fullName>
        <label>ManagerEmail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerFirstName__c</fullName>
        <label>ManagerFirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerLastName__c</fullName>
        <label>ManagerLastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersNo__c</fullName>
        <label>PersNo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <label>StreetAddress</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <label>TimeZoneSidKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>UploadUser</label>
    <nameField>
        <label>UploadUsers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UploadUser</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>